[package]
name = "taketaketaketake"
version = "0.1.0"
authors = ["Iaiao <err266228@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
reqwest = { version = "0.10.7", features = [ "blocking" ] }
curl = "0.4.31"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = [ "derive" ] }
rand = "0.7.3"